# sdd-laplace-solvers

./: .gitignore  CG_analytical_10.txt  CG_analytical_15.txt  CG_analytical_32.txt  CG_approx_10.txt  CG_approx_15.txt  CG_approx_32.txt  CMakeLists.txt  PCG_Diagonal_5.txt  PCG_SSOR_5.txt  main.cpp  solve  test.txt
eval_precon/Diagonal/: PCG_12.txt  PCG_20.txt  PCG_28.txt  PCG_36.txt  PCG_44.txt
eval_precon/Identity/: PCG_12.txt  PCG_20.txt  PCG_28.txt  PCG_36.txt  PCG_44.txt
eval_precon/IncompleteCholesky/: PCG_12.txt  PCG_20.txt  PCG_28.txt  PCG_36.txt
eval_precon/SSOR/: PCG_12.txt  PCG_20.txt  PCG_28.txt  PCG_36.txt  PCG_44.txt
eval_results/CG/: CG_12.txt  CG_20.txt  CG_28.txt  CG_36.txt
eval_results/Gauss-Seidel/: Gauss-Seidel_12.txt  Gauss-Seidel_20.txt  Gauss-Seidel_28.txt
eval_results/Jacobi/: Jacobi_12.txt  Jacobi_20.txt  Jacobi_28.txt
eval_results/PCG/: PCG_12.txt  PCG_20.txt  PCG_28.txt
eval_results/SOR/: SOR_12.txt  SOR_20.txt  SOR_28.txt
grids/PCG/: grid_12.txt
include/: Laplace2D.hpp  PDE.hpp  evaluate.hpp  solvers.hpp
include/basis/: BoundaryCondition.hpp  BoundaryConditions.hpp  LinearSystem.hpp  PDE.hpp  Preconditioners.hpp  basis.hpp
include/solvers/: ConjugateGradient.hpp  GMRM.hpp  GaussSeidel.hpp  Jacobi.hpp  Multigrid.hpp  PCG.hpp  SOR.hpp  config.h  solvers.hpp
include/utils/: SolverLog.hpp  helper.hpp
logs/CG/: CG_100.txt  CG_12.txt  CG_20.txt  CG_28.txt  CG_36.txt  CG_44.txt  CG_52.txt  CG_60.txt  CG_68.txt  CG_76.txt  CG_84.txt  CG_92.txt
logs/Gauss-Seidel/: Gauss-Seidel_100.txt  Gauss-Seidel_12.txt  Gauss-Seidel_20.txt  Gauss-Seidel_28.txt  Gauss-Seidel_36.txt  Gauss-Seidel_44.txt  Gauss-Seidel_52.txt  Gauss-Seidel_60.txt  Gauss-Seidel_68.txt  Gauss-Seidel_76.txt  Gauss-Seidel_84.txt  Gauss-Seidel_92.txt
logs/Jacobi/: Jacobi_100.txt  Jacobi_12.txt  Jacobi_20.txt  Jacobi_28.txt  Jacobi_36.txt  Jacobi_44.txt  Jacobi_52.txt  Jacobi_60.txt  Jacobi_68.txt  Jacobi_76.txt  Jacobi_84.txt  Jacobi_92.txt
logs/PCG/: PCG_100.txt  PCG_12.txt  PCG_20.txt  PCG_28.txt  PCG_36.txt  PCG_44.txt  PCG_52.txt  PCG_60.txt  PCG_68.txt  PCG_76.txt  PCG_84.txt  PCG_92.txt
logs/SOR/: SOR_100.txt  SOR_12.txt  SOR_20.txt  SOR_28.txt  SOR_36.txt  SOR_44.txt  SOR_52.txt  SOR_60.txt  SOR_68.txt  (+3 more)
src/: PDE.cpp  benchmark.cpp  solvers.cpp
tests/: CMakeLists.txt  test_CG.cpp  test_GaussSeidel.cpp  test_Jacobi.cpp  test_PCG.cpp  test_SOR.cpp
(+301 files in other folders)
